<resources>
    <string name="app_name">MediTrack</string>
    <string name="demo_date">01/01/2099</string>
    <string name="no_medicine_for_today">No medicine for today</string>
    <string name="add_task">Add task</string>
    <string name="medicine_name">Medicine name</string>
    <string name="remainder_will_be_repeated_on">Remainder will be repeated on</string>
    <string name="ends_in">Ends in:</string>
    <string name="dose_times">Dose Times</string>
    <string name="select_icon">Select Type</string>
    <string name="notification_type">Notification Type</string>
    <string name="once">Once</string>
    <string name="repeated">Repeated</string>
    <string name="add_notifications_times">Add notifications times</string>
    <string name="plus">+</string>
    <string name="select_repeat_days">Select repeat days</string>
    <string name="sunday">S</string>
    <string name="monday">M</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
    <string name="thursday">T</string>
    <string name="friday">F</string>
    <string name="saturday">S</string>
    <string name="select_end_date">Select end date</string>
    <string name="calendar_icon">Calendar icon</string>
    <string name="save">Save</string>
    <string name="icon">icon</string>
    <string name="n_doses">(n doses)</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="medicine_added">Medicine Added</string>
    <string name="medici_edited">Medicine Edited</string>
    <string name="please_fill_al_the_details">Please fill al the details</string>
    <string name="every_day">Every day</string>

</resources>