<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddMedicineActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/medicine_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_medicine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:autofillHints="Medicine Name"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/medicine_name"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:paddingVertical="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_icon"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sp_shapes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_spinner_shape"
            android:paddingVertical="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/notification_type"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rg_add_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_once"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:checked="true"
                android:padding="10dp"
                android:text="@string/once"
                android:textSize="16sp"
                android:theme="@style/RadioButtonStyle" />

            <RadioButton
                android:id="@+id/rb_repeated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/repeated"
                android:textSize="16sp"
                android:theme="@style/RadioButtonStyle" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/add_notifications_times"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">


            <LinearLayout
                android:id="@+id/tv_times_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp" />
        </HorizontalScrollView>

        <Button
            android:id="@+id/btn_add_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_add_time_button"
            android:text="@string/plus"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/ll_add_end_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_repeat_days"
                android:textSize="16sp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/sunday"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cb_monday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/monday"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cb_tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/tuesday"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cb_wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/wednesday"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cb_thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/thursday"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cb_friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/friday"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cb_saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:buttonTint="@color/colorPrimary"
                        android:text="@string/saturday"
                        android:textColor="@color/black" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_end_date"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_add_end_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/demo_date"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/iv_add_change_date"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/calendar_icon"
                    android:padding="5dp"
                    android:src="@drawable/calendar_regular" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>