<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize">

        <LinearLayout
            android:id="@+id/ll_home_date_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_view_selected_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/demo_date"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
            <ImageView
                android:layout_marginStart="10dp"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/calendar_regular"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_show_no_medicine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/no_medicine_for_today"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_remainders"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/add_task"
        android:src="@drawable/ic_fab_add"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Button.Rounded"
        app:tint="@color/white" />

</FrameLayout>